--- a/src/pages/Onboarding.module.css
+++ b/src/pages/Onboarding.module.css
@@ -1,9 +1,14 @@
 .button{
-   border-radius: 10px;
-   padding: 0 1.5em;
-   background-color: rgb(0, 140, 255);
+   border-radius: 8px;
+   padding: .3em 2em .1em 2em;
+   background-color: #3DA8FF;
    border: none;
 }
 .main{
-   background-color: aqua; 
+   background-color: #BCE7FA; 
+   height: 100vh;
+}
+
+.input {
+background-color: rgb(255, 255, 255);
 }
