--- a/src/components/Swipe/card/index.module.css
+++ b/src/components/Swipe/card/index.module.css
@@ -6,7 +6,7 @@
 }
 
 .tag{
-    background-color: rgb(8, 97, 75);
+    background-color: #126B83;
     text-transform: capitalize;
     border-radius: 20px;
 }
