--- a/src/components/account/index.module.css
+++ b/src/components/account/index.module.css
@@ -1,14 +1,14 @@
 /* Buttons*/
 .btnMicrosoft {
-    background-color: rgb(231,76,137);
+    background-color: #A7D3E7;
 }
 
 .btnApple {
-    background-color: rgb(249,131, 0);
+    background-color: #84D9FF;
 }
 
 .btnLinkedIn {
-    background-color: rgb(96,199,223);
+    background-color: #5FC4DE;
 }
 
 .btnEmail{
